--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
+        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
@@ -23,6 +24,16 @@
                 android:src="@drawable/search_icon"/>
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Media Player"
+            android:textColor="#FFF"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +49,45 @@
                 android:src="@drawable/menu_icon"/>
 
         </LinearLayout>
-
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/start_time"
+                android:layout_marginStart="10dp"
+                android:layout_centerVertical="true"
+                android:textColor="#FFF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="00:00"/>
+
+            <SeekBar
+                android:id="@+id/seek_bar"
+                android:layout_width="match_parent"
+                android:layout_toStartOf="@id/end_time"
+                android:layout_toEndOf="@id/start_time"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/end_time"
+                android:layout_marginEnd="10dp"
+                android:layout_centerVertical="true"
+                android:textColor="#FFF"
+                android:textSize="12sp"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"/>
+
+        </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
