--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -14,7 +14,7 @@
         android:gravity="center_vertical">
         <clip>
             <shape android:shape="rectangle">
-                <solid android:color="#4CAF50"/>
+                <solid android:color="#34B88A"/>
                 <corners android:radius="10dp"/>
                 <size android:height="5dp"/>
             </shape>
