--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,11 +71,13 @@
 
             <SeekBar
                 android:id="@+id/seek_bar"
+                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_toStartOf="@id/end_time"
                 android:layout_toEndOf="@id/start_time"
                 android:layout_height="wrap_content"
                 android:progressDrawable="@drawable/custom_seekbar"
+                android:thumb="@drawable/custom_thumbnail"
                 android:progress="50"
                 android:max="100"/>
 
@@ -91,6 +93,38 @@
                 android:text="00:00"/>
 
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:src="@drawable/pause_botton"
+                android:background="@drawable/round_back_10"
+                android:padding="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:cardBackgroundColor="@color/custom_green"
+                app:cardUseCompatPadding="true"
+                app:cardCornerRadius="50dp"
+                android:outlineAmbientShadowColor="#56BA97"
+                android:outlineSpotShadowColor="@color/teal_700">
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:src="@drawable/pause_botton"
+                android:background="@drawable/round_back_10"
+                android:padding="10dp"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
